Fix IntelliJ project setup and Java compatibility